# pitch-sfter

./: .gitignore  Cargo.toml  Download_HF_Datasets.py  EXAMPLE_process_audio.ipynb  HF_STREAMING_Data_Gathering.ipynb  Process_HF_Datasets.py  audio_preparation.py  audio_preprocessing.py  config.py  data.py  drawings.py  inference.py  losses.py  model.py  pyproject.toml  train.py
crates/poker-core/: Cargo.toml
crates/poker-core/src/: lib.rs
crates/pokertui/: Cargo.toml
inference/: vocoder.py
inference/hifigan/: models.py
