[workspace]
resolver = "3"
members = ["crates/poker-core", "crates/pokertui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
poker-core = { path = "crates/poker-core" }
rand = "0.10"
rs_poker = { version = "4.1", default-features = false }
crossterm = "0.29"
ratatui = "0.30"
tui-cards = "0.3"
