[project]
name = "pitch-shifter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "huggingface>=0.0.1",
    "mypy>=2.0.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "ruff>=0.15.12",
    "torch>=2.11.0",
]
