[project]
name = "pitch-shifter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "huggingface>=0.0.1",
    "kernels>=0.14.1",
    "librosa>=0.11.0",
    "mypy>=2.0.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyloudnorm>=0.2.0",
    "ruff>=0.15.12",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.12.0",
    "torchcrepe>=0.0.24",
    "tqdm>=4.67.3",
    "types-tqdm>=4.67.3.20260508",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
]
